packages/gstreamer/gst/gstquery.inc


function gst_query_new_scheduling: PGstQuery; cdecl; external libgstreamer;
procedure gst_query_set_scheduling(query: PGstQuery; flags: TGstSchedulingFlags; minsize: Tgint; maxsize: Tgint; align: Tgint); cdecl; external libgstreamer;
procedure gst_query_parse_scheduling(query: PGstQuery; flags: PGstSchedulingFlags; minsize: Pgint; maxsize: Pgint; align: Pgint); cdecl; external libgstreamer;
procedure gst_query_add_scheduling_mode(query: PGstQuery; mode: TGstPadMode); cdecl; external libgstreamer;
function gst_query_get_n_scheduling_modes(query: PGstQuery): Tguint; cdecl; external libgstreamer;
function gst_query_parse_nth_scheduling_mode(query: PGstQuery; index: Tguint): TGstPadMode; cdecl; external libgstreamer;
function gst_query_has_scheduling_mode(query: PGstQuery; mode: TGstPadMode): Tgboolean; cdecl; external libgstreamer;
function gst_query_has_scheduling_mode_with_flags(query: PGstQuery; mode: TGstPadMode; flags: TGstSchedulingFlags): Tgboolean; cdecl; external libgstreamer;
function gst_query_new_accept_caps(caps: PGstCaps): PGstQuery; cdecl; external libgstreamer;
procedure gst_query_parse_accept_caps(query: PGstQuery; caps: PPGstCaps); cdecl; external libgstreamer;
procedure gst_query_set_accept_caps_result(query: PGstQuery; Result: Tgboolean); cdecl; external libgstreamer;
procedure gst_query_parse_accept_caps_result(query: PGstQuery; Result: Pgboolean); cdecl; external libgstreamer;
function gst_query_new_caps(filter: PGstCaps): PGstQuery; cdecl; external libgstreamer;
procedure gst_query_parse_caps(query: PGstQuery; filter: PPGstCaps); cdecl; external libgstreamer;
procedure gst_query_set_caps_result(query: PGstQuery; caps: PGstCaps); cdecl; external libgstreamer;
procedure gst_query_parse_caps_result(query: PGstQuery; caps: PPGstCaps); cdecl; external libgstreamer;
function gst_query_new_drain: PGstQuery; cdecl; external libgstreamer;
function gst_query_new_context(context_type: Pgchar): PGstQuery; cdecl; external libgstreamer;
function gst_query_parse_context_type(query: PGstQuery; context_type: PPgchar): Tgboolean; cdecl; external libgstreamer;
procedure gst_query_set_context(query: PGstQuery; context: PGstContext); cdecl; external libgstreamer;
procedure gst_query_parse_context(query: PGstQuery; context: PPGstContext); cdecl; external libgstreamer;
function gst_query_new_bitrate: PGstQuery; cdecl; external libgstreamer;
procedure gst_query_set_bitrate(query: PGstQuery; nominal_bitrate: Tguint); cdecl; external libgstreamer;
procedure gst_query_parse_bitrate(query: PGstQuery; nominal_bitrate: Pguint); cdecl; external libgstreamer;
function gst_query_new_selectable: PGstQuery; cdecl; external libgstreamer;
procedure gst_query_set_selectable(query: PGstQuery; selectable: Tgboolean); cdecl; external libgstreamer;
procedure gst_query_parse_selectable(query: PGstQuery; selectable: Pgboolean); cdecl; external libgstreamer;

function GST_QUERY_TYPE_BOTH: TGstQueryTypeFlags;
function GST_QUERY_MAKE_TYPE(num, flags: longint): longint;

function GST_TYPE_QUERY: TGType;

function GST_IS_QUERY(obj: Pointer): Tgboolean;
function GST_QUERY_CAST(obj: Pointer): PGstQuery;
function GST_QUERY(obj: Pointer): PGstQuery;
function GST_QUERY_TYPE(query: Pointer): TGType;
function GST_QUERY_TYPE_NAME(query: Pointer): Pgchar;
function GST_QUERY_IS_UPSTREAM(ev: Pointer): Tgboolean;
function GST_QUERY_IS_DOWNSTREAM(ev: Pointer): Tgboolean;
function GST_QUERY_IS_SERIALIZED(ev: Pointer): Tgboolean;

function gst_query_is_writable(q: Pointer): Tgboolean;
function gst_query_make_writable(q: Pointer): PGstQuery;


// === Konventiert am: 13-9-24 19:28:25 ===


{$ENDIF read_interface}


{$IFDEF read_implementation}

function GST_QUERY_TYPE_BOTH: TGstQueryTypeFlags;
begin
  GST_QUERY_TYPE_BOTH := TGstQueryTypeFlags(GST_QUERY_TYPE_UPSTREAM or GST_QUERY_TYPE_DOWNSTREAM);
end;

function GST_QUERY_MAKE_TYPE(num, flags: longint): longint;
begin
  GST_QUERY_MAKE_TYPE := (num shl GST_QUERY_NUM_SHIFT) or flags;
end;

function GST_TYPE_QUERY: TGType;
begin
  Result := _gst_query_type;
end;

function GST_IS_QUERY(obj: Pointer): Tgboolean;
begin
  GST_IS_QUERY := GST_IS_MINI_OBJECT_TYPE(obj, GST_TYPE_QUERY);
end;

function GST_QUERY_CAST(obj: Pointer): PGstQuery;
begin
  GST_QUERY_CAST := PGstQuery(obj);
end;

function GST_QUERY(obj: Pointer): PGstQuery;
begin
  GST_QUERY := GST_QUERY_CAST(obj);
end;

function GST_QUERY_TYPE(query: Pointer): TGType;
begin
  GST_QUERY_TYPE := (PGstQuery(query))^._type;
end;

function GST_QUERY_TYPE_NAME(query: Pointer): Pgchar;
begin
  GST_QUERY_TYPE_NAME := gst_query_type_get_name(GST_QUERY_TYPE(query));
end;

function GST_QUERY_IS_UPSTREAM(ev: Pointer): Tgboolean;
begin
  GST_QUERY_IS_UPSTREAM := not (not ((GST_QUERY_TYPE(ev)) and GST_QUERY_TYPE_UPSTREAM)) <> 0;
end;

function GST_QUERY_IS_DOWNSTREAM(ev: Pointer): Tgboolean;
begin
  GST_QUERY_IS_DOWNSTREAM := not (not ((GST_QUERY_TYPE(ev)) and GST_QUERY_TYPE_DOWNSTREAM)) <> 0;
end;

function GST_QUERY_IS_SERIALIZED(ev: Pointer): Tgboolean;
begin
  GST_QUERY_IS_SERIALIZED := not (not ((GST_QUERY_TYPE(ev)) and GST_QUERY_TYPE_SERIALIZED)) <> 0;
end;

function gst_query_is_writable(q: Pointer): Tgboolean;
begin
  gst_query_is_writable := gst_mini_object_is_writable(GST_MINI_OBJECT_CAST(q));
end;

function gst_query_make_writable(q: Pointer): PGstQuery;
begin
  gst_query_make_writable := GST_QUERY_CAST(gst_mini_object_make_writable(GST_MINI_OBJECT_CAST(q)));
end;


{$ENDIF read_implementation}
